--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -134,7 +134,7 @@
 							</a>
 						</li>
 					</ul>
-					<p class="copyright text-muted">Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}</p>
+					<p class="copyright text-muted">Copyright &copy; {{ site.title }} 2019</p>
 				</div>
 			</div>
 		</div>
